--- a/views/nueva_sala.ejs
+++ b/views/nueva_sala.ejs
@@ -8,7 +8,7 @@
                         <div class="card-content pb-0">
                             <div class="card-header mb2"> 
                             </div>
-                            <form id="uploadSala" enctype="multipart/form-data">
+                            <form id="uploadSala" action="/museo/<%=museo%>" enctype="multipart/form-data">
                             <ul class="stepper  linear horizontal">
                             <li class="step active"> 
                                 <div class="step-title waves-effect"> <p>Información</p> </div>
