--- a/views/sala_modificar.ejs
+++ b/views/sala_modificar.ejs
@@ -5,8 +5,8 @@
                 <div class="row">
                     
                         <div class="col s10 offset-s1">
-                            <h4 class="white-text card-title">
-                                <%=sala.nom_sala%>
+                            <h4 class="white-text">
+                                <span><%=m.nom_museo%></span> > <span><%=sala.nom_sala%></span>
                             </h4>
                             <input id="id_museo" value="<%=museo%>" style="display:none">
                             <input id="id_sala" value="<%=sala.id_sala%>" style="display:none">
