--- a/views/obra_modificar.ejs
+++ b/views/obra_modificar.ejs
@@ -6,9 +6,9 @@
                     <input style="display:none" id="id_sala" value="<%= sala %>">
                     <input style="display:none" id="id_obra" value="<%= obra.id_obra %>">
                         <div class="col s10 offset-s1">
-                            <h4 class="white-text card-title">
-                                <span><%=m[0].nom_museo%></span> > <span><%=s[0].nom_sala%></span> > <span><%=obra.nom_obra%></span>
-                            </h4>
+                            <span class="white-text card-title">
+                                <span style="font-size:40px"><%=obra.nom_obra%> </span> <div><a href="/"> Página principal </a> > <a href="/museo/<%= museo %>"><%=m[0].nom_museo%></a> > <a href="/museo/<%= museo %>/<%= sala %>"><%=s[0].nom_sala%></a> > <a href="/museo/<%= museo %>/<%= sala %>/<%=obra.id_obra%>"><%=obra.nom_obra%></a></div> 
+                            </span>
                             <input id="id_museo" value="<%=museo%>" style="display:none">
                             <input id="id_sala" value="<%=sala.id_sala%>" style="display:none">
                             <div class="card">
