--- a/views/sala_modificar.ejs
+++ b/views/sala_modificar.ejs
@@ -5,9 +5,9 @@
                 <div class="row">
                     
                         <div class="col s10 offset-s1">
-                            <h4 class="white-text">
-                                <span><%=m.nom_museo%></span> > <span><%=sala.nom_sala%></span>
-                            </h4>
+                            <span class="white-text card-title">
+                                <span style="font-size:40px"><%=sala.nom_sala%> </span> <div> <a href="/"> Página principal </a> ><a href="/museo/<%= museo %>"><%=m.nom_museo%></a> > <a href="/museo/<%= museo %>/<%= sala.id_sala %>"><%=sala.nom_sala%></a></div> 
+                            </span>
                             <input id="id_museo" value="<%=museo%>" style="display:none">
                             <input id="id_sala" value="<%=sala.id_sala%>" style="display:none">
                             <div class="card">
