--- a/views/nueva_obra.ejs
+++ b/views/nueva_obra.ejs
@@ -110,7 +110,7 @@
                                                                         <div class="btn">
                                                                             <input id="audioname" style="display:none">
                                                                             <span> Mp3</span>
-                                                                            <input type="file" id="uploadAudio">
+                                                                            <input type="file" name="uploadAudio" id="uploadAudio">
                                                                         </div>
                                                                         <div class="file-path-wrapper">
                                                                             <input placeholder="audioguía (archivo mp3)" class="file-path validate"
