--- a/views/obra_modificar.ejs
+++ b/views/obra_modificar.ejs
@@ -119,7 +119,7 @@
                                                                         <div class="btn">
                                                                             <input id="audioname2" value="<%=obra.audio_obra%>" style="display:none">
                                                                             <span> Mp3</span>
-                                                                            <input type="file" id="uploadAudio">
+                                                                            <input type="file" name="uploadAudio" id="uploadAudio">
                                                                         </div>
                                                                         <div class="file-path-wrapper">
                                                                             <input placeholder="audioguía (archivo mp3)" value="<%=obra.audio_obra%>" class="file-path validate"
