--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -73,7 +73,7 @@
               <li class="card-pers card-panel z-depth-3 border-radius-6 mt-10 card-animation-1">
                 <a class="margin-0 center-align">
                   <img class="imgr border-radius-8 z-depth-4 image-n-margin"
-                    src="/uploads/<%=evento.multimedia_evento%>">
+                    src="/uploads/eventos/<%=evento.multimedia_evento%>">
                 </a>
                 <h6 class="primary-color-txt text-darken-3 mt-5"><b>
                     <%=evento.info_evento%>
