--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -44,7 +44,7 @@
 
   <script>
     $(document).ready(function() {
-    $('input#input_text, textarea#textarea2,input').characterCounter();
+      M.CharacterCounter.init($('input[type="text"]'));
     });
   </script>
 
