--- a/views/guias.ejs
+++ b/views/guias.ejs
@@ -12,7 +12,7 @@
             <% for (guia of guias) { %> 
             <div class="row center valign-wrapper ">
                 <div class="col s3">
-                    <img src="/uploads/<%=guia.imagen_guia%>" style="width: fit-content; height: 100px; border-radius: 9px;">
+                    <img src="/uploads/guias/<%=guia.imagen_guia%>" style="width: fit-content; height: 100px; border-radius: 9px;">
                 </div>
                 <div class="col s6">
                     <div class="row">
