--- a/views/agregar_guia.ejs
+++ b/views/agregar_guia.ejs
@@ -68,5 +68,29 @@
 
             </div>
     </div>
-    <script src="/js/script_nuevo_museo.js"></script>
+    <script>
+        
+$(document).ready(function() {
+
+var readURL = function(input) {
+    if (input.files && input.files[0]) {
+        var reader = new FileReader();
+
+        reader.onload = function (e) {
+            $('.imgP').attr('src', e.target.result);
+        }
+
+        reader.readAsDataURL(input.files[0]);
+    }
+}
+
+$(".file-upload").on('change', function(){
+ 
+ readURL(this);
+});
+
+
+});
+
+    </script>
     <%- include('includes/footer.ejs') %>
