--- a/views/editar_guia.ejs
+++ b/views/editar_guia.ejs
@@ -14,7 +14,7 @@
                             <div class="card imgPicker">
                                 <div class="card-image">
                                     <input value="<%=imagen%>" name="imagen_url" style="display:none">
-                                    <img class="imgPicker imgP" src="/uploads/<%=imagen%>">
+                                    <img class="imgPicker imgP" src="/uploads/guias/<%=imagen%>">
                                     <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload"
                                         onclick="filebutton.click()"><i class="material-icons">edit</i></div>
                                     <input class="file-upload" id="filebutton" type="file" name="url_imagen"
